[gd_scene load_steps=5 format=3 uid="uid://bbp8njg8kxrok"]

[ext_resource type="Script" path="res://scenes/scripts/Menu.gd" id="1_f24xr"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dgjcf"]
content_margin_left = 2.0
content_margin_top = 2.0
content_margin_right = 2.0
content_margin_bottom = 2.0
bg_color = Color(0.138614, 0.429358, 0.826406, 1)
border_width_bottom = 4
border_color = Color(0.196215, 0.442666, 1, 0.541176)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
shadow_color = Color(0, 0, 0, 0.262745)
shadow_size = 3
shadow_offset = Vector2(0, 3)
anti_aliasing_size = 0.732

[sub_resource type="Theme" id="Theme_bg0w3"]
Button/styles/normal = SubResource("StyleBoxFlat_dgjcf")

[sub_resource type="Theme" id="Theme_hduo8"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -48.0
offset_top = -62.0
offset_right = -1.0
offset_bottom = -1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_bg0w3")
script = ExtResource("1_f24xr")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="play" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_hduo8")
text = "Play"

[node name="multiplayer" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Multiplayer"

[node name="options" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Options"

[node name="how to" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "How to Play"

[node name="exit" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Exit"

[connection signal="pressed" from="MarginContainer/VBoxContainer/play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/multiplayer" to="." method="_on_multiplayer_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/how to" to="." method="_on_how_to_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/exit" to="." method="_on_exit_pressed"]
